<resources>
    <string name="app_name">LevaMeContigo</string>

    <string name="signin_email">Email</string>
    <string name="signin_password">Palavra-passe</string>
    <string name="signin_login">Entrar</string>
    <string name="signin_signup">Criar nova conta</string>
    <string name="signin_guest">Entrar como anónimo</string>
    <string name="signin_or">OU</string>

    <string name="signup_name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Palavra-passe</string>
    <string name="signup_signup">Criar nova conta</string>

    <string name="changepassword_email">Email</string>
    <string name="changepassword_password">Palavra-passe</string>
    <string name="changepassword_aleatory">Palavar-passe aleatória</string>
    <string name="changepassword_changepassword">Mudar Palavra-passe</string>

    <string name="rate_tv1">Avaliar</string>
    <string name="rate_tv2">Avaliação:</string>
    <string name="rate_et">Escreva a sua avaliação (opcional)</string>
    <string name="comment_tv">Comentar</string>
    <string name="comment_et">Escreva o seu comentário.</string>

    <string-array name="destinos_origens">
        <item>Faro</item>
        <item>Beja</item>
        <item>Setubal</item>
        <item>Évora</item>
        <item>Portalegre</item>
        <item>Santarém</item>
        <item>Lisboa</item>
        <item>Leiria</item>
        <item>Coimbra</item>
        <item>Castelo Branco</item>
        <item>Guarda</item>
        <item>Viseu</item>
        <item>Aveiro</item>
        <item>Porto</item>
        <item>Braga</item>
        <item>Viana do Castelo</item>
        <item>Vila Real</item>
        <item>Bragança</item>
    </string-array>

    <string-array name="dias">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="mes">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="ano">
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="minutes">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>

    <string-array name="hours">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="numPessoas">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
    </string-array>

</resources>
