<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/signin_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signin_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/signin_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signin_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_email"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/signin_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="HandleSignIn"
        android:text="@string/signin_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_password"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/signin_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_entrar"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/signin_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="HandleSignUp"
        android:text="@string/signin_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_or"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/signin_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_signup"
        app:layout_constraintVertical_bias="0.347" />

</androidx.constraintlayout.widget.ConstraintLayout>